<resources>
    <string name="app_name">UpworkTracker</string>

    <string name="refresh">Refresh</string>
    <string name="upwork_tracker">Upwork Tracker</string>
    <string name="title_card">PANAMA (Spanish) male VO to record TV spot</string>
    <string name="category_card">Voice talent</string>
    <string name="date_card">12:53</string>
    <string name="description_card">Hi,we are lookink for a native male PANAMA(SPANISH) VO to record on TV sssssssssssssssssssssssssssssssssppppppppppppppppppppppppppppppppppppp</string>
    <string name="budget_card">$200</string>
    <string name="country_card">Spain</string>
    <string name="tag">very good</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="next_page_button">Next</string>
    <string name="first_fragment_title">Check for jobs in bed, on the run or anywhere else - easy!</string>
    <string name="first_fragment_description">Still checking for freelancer jobs only when sitting in front of a computer?</string>
    <string name="second_fragment_title">Never miss an opportunity</string>
    <string name="second_fragment_description">Set filters and get notified first about new projects for you.</string>
    <string name="third_fragment_title">Get more done with Upwork Tracker</string>
    <string name="third_fragment_description">Tracker lets you choose what job categories, budget, locations, keywords you want to see.</string>
    <string name="welcome_header">Welcome to</string>
    <string name="upwork_tracker_header">Upwork Tracker</string>


    <string name="client_location">Client Location</string>
    <string name="hours_per_week">Hours Per Week</string>
    <string name="client_info">Client Info</string>
    <string name="budget">Budget</string>
    <string name="number_of_proposals">Number of Proposals</string>
    <string name="client_history">Client History</string>
    <string name="experience_level">Experience Level</string>
    <string name="job_type">Job Type</string>
    <string name="sorting_by">Sorting By</string>
    <string name="accounting_amp_consulting"><![CDATA[accounting & consulting]]></string>
    <string name="admin_support">admin support</string>
    <string name="customer_service">customer service</string>
    <string name="data_science_amp_analytics"><![CDATA[data science & analytics]]></string>
    <string name="design_amp_creative"><![CDATA[design & creative]]></string>
    <string name="engineering_amp_architecture"><![CDATA[engineering & architecture]]></string>
    <string name="it_amp_networking"><![CDATA[it & networking]]></string>
    <string name="legal">legal</string>
    <string name="sales_amp_marketing"><![CDATA[sales & marketing]]></string>
    <string name="translation">translation</string>
    <string name="web_mobile_amp_software_dev"><![CDATA[web, mobile & software dev]]></string>
    <string name="writing">writing</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="track_button_text">Track</string>
    <string name="clear_button_text">Clear</string>

</resources>
