<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="70dp">

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sorting_by" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sortingByRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                android:id="@+id/category"
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Category" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_type" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/jobTypeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experience_level" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/experienceRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_history" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clientHistoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />


            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_proposals" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/numberOfProposalsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/budget" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/budgetRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_info" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/clientInfoRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hours_per_week" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hoursPerWeekRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                android:nestedScrollingEnabled="false"
                android:scrollbars="none" />

            <TextView
                style="@style/CustomTextViewFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_location" />

            <View
                style="@style/Line"
                android:layout_marginStart="20dp"
                android:background="#888" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

    </LinearLayout>

</FrameLayout>